syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.hjforever.grpc.user";
option java_outer_classname = "UserProto";
option objc_class_prefix = "USER";

package user;

// The user service definition.
service User {

    //根据id查询用户
    rpc QueryUserById (UserRequest) returns (UserReply) {};

    //双向流 （流是可以多次）
    rpc QueryUserByName (stream UserRequest) returns (stream UserReply) {};

}

message UserReply {
    int64 userId = 1;
    string name = 2;
    int32 age = 3;
}

message UserRequest {
    int64 userId = 1;
    string name = 2;
}